webroot/rsrc/css/application/conpherence/durable-column.css
/**
 * @provides conpherence-durable-column-view
 */

.global-upload-mask {
  pointer-events: none;
}

.conpherence-durable-column {
  position: fixed;
  bottom: 0;
  right: 16px;
  width: 400px;
  height: 360px;
  background: {$page.content};
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
  box-shadow: 0px 1px 8px rgba(55,55,55, .3);
}

.device .conpherence-durable-column,
.printable .conpherence-durable-column,
!print .conpherence-durable-column {
  display: none;
}

.conpherence-durable-column .conpherence-transaction-image {
  float: left;
  border-radius: 3px;
  height: 24px;
  width: 24px;
  background-size: 24px;
  position: absolute;
  top: 5px;
}

.device-desktop .conpherence-durable-column.loading .loading-mask {
  display: block;
}

.conpherence-durable-column-header .conpherence-settings-dropdown {
  z-index: 1;
}

.conpherence-durable-column-header  .phabricator-application-menu
  .phui-list-item-name {
    display: none;
}

.conpherence-durable-column-header .aphlict-connection-status {
  width: 6px;
  float: left;
  height: 18px;
  margin-left: 10px;
  margin-top: 8px;
}

.conpherence-durable-column-header .aphlict-connection-status
  .connection-status-text {
    display: none;
}

.conpherence-durable-column-header .aphlict-connection-status
  .phui-icon-view {
    font-size: 10px;
}

.device-desktop .conpherence-durable-column-header .phabricator-application-menu
  .phui-list-item-view {
    margin: 0;
    width: 28px;
    height: 34px;
    min-width: 28px;
}

.device-desktop .conpherence-durable-column-header .phabricator-application-menu
  .phui-list-item-href {
    background: transparent;
    border: none;
    padding: 0;
}

.conpherence-durable-column-header {
  border-top-right-radius: 3px;
  border-top-left-radius: 3px;
  background-color: #525867;
}

.conpherence-durable-column-header:hover {
  cursor: pointer;
  background-color: #5f6572;
}

.conpherence-durable-column-header .phabricator-application-menu {
  margin-right: 8px;
}

.conpherence-durable-column-header
  .phabricator-main-menu-dropdown.phui-list-sidenav {
    top: 30px;
}

.conpherence-durable-column-header-text {
  float: left;
  padding: 8px 0 8px 10px;
  color: #fff;
  width: 260px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-shadow: 1px 1px 0 rgba(0,0,0,.6);
}

.conpherence-durable-column-header .phabricator-application-menu
  .phui-list-item-icon.phui-font-fa {
    font-size: 15px;
    margin: 0;
    height: 15px;
    width: 15px;
    padding: 10px 8px 10px 8px;
}

.conpherence-durable-column-icon-bar {
  width: 36px;
  background-color: {$lightgreybackground};
  border-right: 1px solid {$thinblueborder};
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
}

.conpherence-durable-column-icon-bar .conpherence-durable-column-thread-icon {
  height: 28px;
  width: 28px;
  padding: 4px;
  display: block;
}

.conpherence-durable-column-icon-bar
.conpherence-durable-column-thread-icon.selected {
  background-color: rgba({$alphablue},.1);
}

.conpherence-durable-column-icon-bar
.conpherence-durable-column-thread-icon span {
  display: block;
  width: 28px;
  height: 28px;
  border-radius: 3px;
  background-size: 28px 28px;
}

.conpherence-durable-column-body {
  position: absolute;
  top: 34px;
  bottom: 0;
  right: 0;
  left: 0;
}

.conpherence-durable-column-main {
  position: absolute;
  top: 0;
  bottom: 36px;
  left: 34px;
  right: 0;
  overflow-x: hidden;
}

.conpherence-durable-column .column-no-rooms {
  padding: 12px 8px;
}

.conpherence-durable-column .column-no-rooms-text {
  color: {$greytext};
  font-style: italic;
  margin-bottom: 16px;
}

.conpherence-durable-column-transactions {
  padding: 8px 12px 0;
}

.conpherence-durable-column-transactions .conpherence-transaction-view {
  background: none;
  margin: 0;
  padding: 4px 0;
  min-height: 0;
}

.conpherence-durable-column-transactions .conpherence-transaction-view
  .conpherence-message {
    word-wrap: break-word;
}

.conpherence-durable-column-transactions .conpherence-transaction-view
  .conpherence-transaction-detail {
    border: 0;
    margin: 0 0 0 32px;
}

.conpherence-durable-column-transactions .conpherence-transaction-view
  .conpherence-transaction-detail .conpherence-transaction-header {
    background: none;
    padding: 0 0 2px 0;
}

.conpherence-durable-column-transactions
  .conpherence-transaction-view.date-marker {
    margin: 12px 0 0;
}

.conpherence-durable-column-transactions
  .conpherence-transaction-view.date-marker .date {
    left: 0;
    font-size: {$normalfontsize};
    top: -10px;
    padding: 0 6px 0 0;
}

.conpherence-durable-column-transactions
.conpherence-transaction-detail
.conpherence-transaction-content
.phui-pinboard-item-view {
  width: 273px;
}

.conpherence-durable-column-transactions
.conpherence-transaction-detail
.conpherence-transaction-content
.phui-pinboard-item-view
.phui-pinboard-item-image-link
img {
  width: 265px;
  height: 199px;
}

.conpherence-durable-column-transactions .conpherence-transaction-detail
  .conpherence-transaction-content {
    padding: 0 0 8px 0;
}

.conpherence-durable-column-textarea {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 36px;
  margin: 0;
  border-width: 1px 0 0 0;
  border-style: solid;
  border-top-color: {$thinblueborder};
  padding: 8px;
  width: 100%;
  resize: none;
}

.conpherence-durable-column-textarea:focus {
  outline: 0;
  border-top-color: {$lightblueborder};
  box-shadow: none;
}


/* Minimized Column */

.minimize-column .conpherence-durable-column {
  height: 32px;
  width: 240px;
  box-shadow: none;
}

.minimize-column .conpherence-durable-column .conpherence-durable-column-body {
  display: none;
}

.minimize-column .conpherence-durable-column
  .conpherence-durable-column-header {
    background-color: rgba({$alphablue},.15);
}

.minimize-column .conpherence-durable-column
  .conpherence-durable-column-header:hover {
    background-color: rgba({$alphablue},.2);
}

.minimize-column .conpherence-durable-column
  .conpherence-durable-column-header-text {
    width: 100px;
    color: {$darkbluetext};
    text-shadow: none;
}

.minimize-column .conpherence-durable-column
  .conpherence-durable-column-header .phabricator-application-menu
  .phui-list-item-icon.phui-font-fa {
    color: {$bluetext};
}

.minimize-column .conpherence-durable-column
  .conpherence-durable-column-header .phabricator-application-menu
  .phui-list-item-view:hover .phui-list-item-icon.phui-font-fa {
    color: {$darkbluetext};
}

.minimize-column .conpherence-durable-column
  .conpherence-durable-column-header .phabricator-application-menu
  .phui-list-item-icon.phui-font-fa:before {
    content: "\f151";
}

.minimize-column .conpherence-durable-column .phabricator-application-menu
  .fa-gear {
    display: none;
}

